--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "mongodb": "^3.7.1"
+    "mongodb": "^3.7.1",
+    "mongoose": "^6.0.9"
   }
 }
