--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.7.1",
     "mongoose": "^6.0.9",
+    "multer": "^1.4.3",
     "validator": "^10.9.0"
   },
   "devDependencies": {
