--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mongodb": "^3.7.1",
     "mongoose": "^6.0.9",
     "multer": "^1.4.3",
+    "sharp": "^0.29.2",
     "validator": "^10.9.0"
   },
   "devDependencies": {
